--- a/csv2json/dune-project
+++ b/csv2json/dune-project
@@ -7,9 +7,9 @@
 (source
  (github username/reponame))
 
-(authors "Author Name")
+(authors "Joshua Mo")
 
-(maintainers "Maintainer Name")
+(maintainers "Joshua Mo")
 
 (license LICENSE)
 
