--- a/dream_service/dune-project
+++ b/dream_service/dune-project
@@ -19,7 +19,7 @@
  (name dream_service)
  (synopsis "A short synopsis")
  (description "A longer description")
- (depends ocaml dune dream ppx_deriving_yojson yojson lwt atdgen-runtime)
+ (depends ocaml dune dream ppx_deriving_yojson yojson lwt caqti-driver-postgresql)
  (tags
   (topics "to describe" your project)))
 
